--- a/static/result.css
+++ b/static/result.css
@@ -1,8 +1,8 @@
 body {
-    
-    background-image:url('doc.jpg');
+    background: #eafaf1;
+    background-image:url('bg1.jpg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 h1, h2, h3, h4, h5,h6{
