--- a/template/cancer.html
+++ b/template/cancer.html
@@ -176,7 +176,7 @@ There are many different types of breast cancer and common ones include ductal c
     <div class='footer'>
            <div class="contact">
                <a target="_blank" href="https://github.com/debashisdas55?tab=repositories"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.linkedin.com/in/debashis-das-184431bb/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a target="_blank" href="www.linkedin.com/in/d4dev"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
            </div>
            <p class='footer-description'><b>Made with ❤️ by Debashis Das & Krishna Dalal.</b></p>
        </div>
