--- a/template/heart.html
+++ b/template/heart.html
@@ -159,7 +159,7 @@ You can help reduce your risk of heart disease by taking steps to control factor
     <div class='footer'>
            <div class="contact">
                <a target="_blank" href="https://github.com/debashisdas55?tab=repositories"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="www.linkedin.com/in/d4dev"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://www.linkedin.com/in/d4dev/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
            </div>
            <p class='footer-description'><b>Made with ❤️ by Debashis Das & Krishna Dalal.</b></p>
        </div>
