--- a/template/home.html
+++ b/template/home.html
@@ -100,7 +100,7 @@
 <!-- Footer -->
     <div class='footer'>
            <div class="contact">
-               <a target="_blank" href="https://github.com/debashisdas55?tab=repositories"><i class="fab fa-github fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://github.com/d4deva"><i class="fab fa-github fa-lg contact-icon"></i></a>
                <a target="_blank" href="https://www.linkedin.com/in/d4dev/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
            </div>
            <p class='footer-description'><b>Made with ❤️ by Debashis Das & Krishna Dalal.</b></p>
